--- a/openstack-blueprint.yaml
+++ b/openstack-blueprint.yaml
@@ -37,7 +37,16 @@ dsl_definitions:
     tenant_name: { get_secret: keystone_tenant_name }
     auth_url: { get_secret: keystone_url }
     region: { get_secret: region }
-
+    custom_configuration:
+      keystone_client:
+        insecure: true
+      nova_client:
+        insecure: true
+      neutron_client:
+        insecure: true
+      cinder_client:
+        insecure: true
+        
 node_templates:
 
   kubernetes_master_host:
